[DDW-861] Review: Fix scrollbar style

--- a/source/renderer/app/components/wallet/tokens/wallet-token-picker/WalletTokenPicker.scss
+++ b/source/renderer/app/components/wallet/tokens/wallet-token-picker/WalletTokenPicker.scss
@@ -79,8 +79,9 @@
 
   .list {
     height: 450px;
-    margin-right: -20px;
+    margin-right: -25px;
     overflow-y: scroll;
+    padding-right: 5px;
   }
 
   .listItem {
